BUG#47752, missed to sort values in list partitioning